--- a/client/public/locales/en-US.yaml
+++ b/client/public/locales/en-US.yaml
@@ -981,6 +981,17 @@ Video:
     You appear to be offline: You appear to be offline.
     Playback will resume automatically when your connection comes back: Playback will resume automatically when your connection comes back.
     Skipped segment: 'Skipped {segmentCategory} segment'
+    Equalizer: Equalizer
+    Reset: Reset
+    EQ Presets:
+      Custom: Custom
+      Flat: Flat
+      Bass Boost: Bass Boost
+      Treble Boost: Treble Boost
+      Vocal: Vocal
+      Electronic: Electronic
+      Rock: Rock
+      Jazz: Jazz
 #& Playlists
 Playlist:
   #& About
