feat: add audio effects (mono, stereo width, reverb) to equalizer panel
- Add audio-effects.js helper with mono mode, stereo width, and reverb
- Integrate audio effects into the audio processing chain
- Add UI controls in EqualizerPanel (toggles and sliders)
- Add settings persistence for audio effects
- Add translations for zh-TW and en-US

--- a/client/public/locales/en-US.yaml
+++ b/client/public/locales/en-US.yaml
@@ -1007,6 +1007,13 @@ Video:
       Treble Boost: Treble Boost
       Treble Reducer: Treble Reducer
       Vocal: Vocal
+    Audio Effects: Audio Effects
+    Mono: Mono
+    Stereo Width: Stereo Width
+    Reverb: Reverb
+    Narrow: Narrow
+    Normal: Normal
+    Wide: Wide
 #& Playlists
 Playlist:
   #& About
